@@ -1696,7 +1696,7 @@ dpif_netdev_port_open_type(const struct dpif_class *class, const char *type)
 {
     return strcmp(type, "internal") ? type
                   : dpif_netdev_class_is_dummy(class) ? "dummy-internal"
-                  : "tap";
+                  : dpdk_available() ? "dpdkvirtiouser" : "tap";
 }
 
 static struct dpif *
