@@ -9,6 +9,7 @@ m4_define([SYSTEM_DPDK_ALLOWED_LOGS],[
 \@EAL: No \(available\|free\) .*hugepages reported@d
 \@Failed to enable flow control@d
 \@Rx checksum offload is not supported on@d
+\@tap iface does not support multi queue, this can be fixed by deleting it and restarting OVS.@d
 \@TELEMETRY: No legacy callbacks, legacy socket not created@d
 ])
 
